Bug 37100 - /usr/lib/gcc/x86_64-pc-linux-gnu/4.1.2/include/g++-v4/bits/stl_pair.h:99: error 404
Summary: /usr/lib/gcc/x86_64-pc-linux-gnu/4.1.2/include/g++-v4/bits/stl_pair.h:99: err...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: libstdc++ (show other bugs)
Version: 4.1.2
: P3 minor
Target Milestone: 4.3.2
Assignee: Paolo Carlini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-12 22:40 UTC by Imre Pentek
Modified: 2008-08-12 23:17 UTC (History)
1 user (show)

See Also:
Host: x86_64-pc-linux-gnu
Target: x86_64-pc-linux-gnu
Build: x86_64-pc-linux-gnu
Known to work:
Known to fail:
Last reconfirmed: 2008-08-12 23:10:43


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Imre Pentek 2008-08-12 22:40:17 UTC
At /usr/lib/gcc/x86_64-pc-linux-gnu/4.1.2/include/g++-v4/bits/stl_pair.h:99:
/// <http://gcc.gnu.org/onlinedocs/libstdc++/20_util/howto.html#pairlt>
the referenced doc doesn't exist.
Comment 1 Andrew Pinski 2008-08-12 22:43:43 UTC
That is because it moved:
http://gcc.gnu.org/onlinedocs/libstdc++/manual/bk01pt04ch10.html
Comment 2 Paolo Carlini 2008-08-12 23:10:43 UTC
For now, let's just change the url to point to the utilities subsection, which doesn't change when the documentation is regenerated (... I know, we should really deal with the latter issue, but it's known already)
Comment 3 paolo@gcc.gnu.org 2008-08-12 23:15:33 UTC
Subject: Bug 37100

Author: paolo
Date: Tue Aug 12 23:14:10 2008
New Revision: 139040

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=139040
Log:
2008-08-12  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/37100
	* include/bits/stl_pair.h: Fix documentation URL in comment.

Modified:
    trunk/libstdc++-v3/ChangeLog
    trunk/libstdc++-v3/include/bits/stl_pair.h

Comment 4 paolo@gcc.gnu.org 2008-08-12 23:16:45 UTC
Subject: Bug 37100

Author: paolo
Date: Tue Aug 12 23:15:23 2008
New Revision: 139041

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=139041
Log:
2008-08-12  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/37100
	* include/bits/stl_pair.h: Fix documentation URL in comment.

Modified:
    branches/gcc-4_3-branch/libstdc++-v3/ChangeLog
    branches/gcc-4_3-branch/libstdc++-v3/include/bits/stl_pair.h

Comment 5 Paolo Carlini 2008-08-12 23:17:18 UTC
Fixed for 4.3.2.